Fixed sub-menu-wrap

--- a/wp-content/themes/comfy/src/scss/components/_header.scss
+++ b/wp-content/themes/comfy/src/scss/components/_header.scss
@@ -275,7 +275,7 @@ main {
             cursor: pointer;
           }
           &-wrap {
-            position: absolute;
+            position: fixed;
             z-index: 0;
             left: 0;
             right: 0;
